--- a/about.html
+++ b/about.html
@@ -11,9 +11,10 @@
 </head>
 <body>
 <div id="fp">
-    <p><a href="http://blha303.com.au"><img src="blha303.png" alt="blha303's logo" width=125 border=0></a></p>
+    <p><a href="http://blha303.com.au"><img src="images/blha303.png" alt="blha303's logo" width=125 border=0></a></p>
     <p>This site was made after ruan on irc.esper.net/bukkitdev mentioned the words "the plugin bay".</p>
     <p>Copyleft 2013, All Rights Unreserved: <a href="http://blha303.com.au">blha303</a></p>
+    <p>Source: <a href="https://github.com/blha303/thepluginbay.com">https://github.com/blha303/thepluginbay.com</a></p>
 </div>
 <footer>
     <div id="icons">
